fix z-index in get-started.css

--- a/css/sections/getstarted.css
+++ b/css/sections/getstarted.css
@@ -40,7 +40,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: -1;
   width: 100%;
   height: 100%;
   background-color: #d6f0ff;
